@@ -1,3 +1,12 @@
+2010-09-26 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/hc08/peeph.def:
+	  Fixed #1715020.
+	* src/SDCCerr.h,
+	  src/z80/gen.c,
+	  src/SDCCast.c:
+	  Minor spelling corrections in comments.
+
 2010-09-26 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/SDCCicode.c (geniCodeStruct): fixed bug 3029630
